Fix bottom buttons overlapping with Footer

--- a/src/layout/Layout.scss
+++ b/src/layout/Layout.scss
@@ -6,7 +6,7 @@
   background-color: #ffffff;
   margin-top: 93px;
   min-height: calc(100vh - 250px);
-  padding-bottom: 5rem;
+  padding-bottom: 12rem;
   width: 100%;
 }
 
